--- a/ReleaseNotes_4.6.3.3
+++ b/ReleaseNotes_4.6.3.3
@@ -1,1 +1,3 @@
 Se automatizó el release notes. (EJC)
+WMS-206 Modificar la reserva de inventario en los EA como se hace en Mercosal
+WMS-273 Pruebas de impresión y correcciones (AT)
