--- a/ReleaseNotes_4.6.3.7
+++ b/ReleaseNotes_4.6.3.7
@@ -1,1 +1,3 @@
 Se automatizó el release notes. (EJC)
+1. Se corrigió el error reportado en el cambio de estado, el estado era válido pero daba mensaje "Estado destino incorrecto"
+2. Se corrigió el error reportado en el cambio de ubicación no dirigido con la HH, antes enviaba un mensaje para confirmar el cambio
