--- a/RealeseNotes_4.6.3.8
+++ b/RealeseNotes_4.6.3.8
@@ -3,3 +3,4 @@
 3. En existencias al realizar el cambio de ubicación si no se hacía el cambio de ubicación al salir de existencias e ir por el menú al cambio de ubicación la pantalla aparecia con los datos seleccionados en la existencia
 4. Poner un progress bar en el reabastecimiento manual
 5. Poner un progress en la reubicación
+6. Corrección en el cambio de ubicación cuando el producto no tiene ubicación sugerida
