--- a/RealeseNotes_4.6.3.8
+++ b/RealeseNotes_4.6.3.8
@@ -4,3 +4,5 @@
 4. Poner un progress bar en el reabastecimiento manual
 5. Poner un progress en la reubicación
 6. Corrección en el cambio de ubicación cuando el producto no tiene ubicación sugerida
+7. Ajuste en despachos parciales, se muestra únicamente el producto despachado y no todo el pedido (b3pl)
+8. Ticket TMS se pueden reutilizar y reimprimir (b3pl)
