--- a/RealeseNotes_4.6.3.8
+++ b/RealeseNotes_4.6.3.8
@@ -6,3 +6,5 @@
 6. Corrección en el cambio de ubicación cuando el producto no tiene ubicación sugerida
 7. Ajuste en despachos parciales, se muestra únicamente el producto despachado y no todo el pedido (b3pl)
 8. Ticket TMS se pueden reutilizar y reimprimir (b3pl)
+9. Corrección de la fecha en la HH en el cambio de ubicación para que se guarde la fecha con hora
+10. Corrección de la inicialización del IdTipoTarea.
