--- a/RealeseNotes_4.6.3.8
+++ b/RealeseNotes_4.6.3.8
@@ -1,33 +1,33 @@
-1	-	WMS-310	Validar proceso completo del un inventario ciclico
-2	-	WMS-326	Error en el cambio de ubicación cuando hay presentación y unidades
-3	-	WMS-329	Validar distribucion peso en cambio ubicacion
-4	-	WMS-330	Explosionar varias veces una licencia en el cambio de ubicación
-5	-	WMS-331	Sumar la cantidad de una licencia cuando tenga mas de un stock en unidades, en el cambio de ubicación
-6	-	WMS-333	Creación de presentaciones que no debian crearse, generando inconsistencias
-7	-	WMS-334	Validar Cambio de Estado
-8	-	WMS-335	Corregir Ajustes de inventario, en ocasiones al poner la cantidad en 0 permite guardar el ajuste y se pierde el Stock
-9	-	WMS-337	Agregar al reporte de Movimientos la columna de IdOrdenCompraEnc
-10	-	WMS-339	Error en el cambio de ubicación cuando la cantidad se modifica y no se limpia el campo
-11	-	WMS-340	Correccion en el reemplazo en picking, estaba llegando el IdPedido en 0 al insertar el nuevo picking ubic
-12	-	WMS-327	Validar productos con propiedades deshabilitadas
-13	-	WMS-341	Modificar vista VW_Fiscal_CtasOrden
-14	-	WMS-342	Error con la liberación del stock reservado cuando se hace el Despacho
-15	-	WMS-344	Validar simbolos validos removidos en DI
-16	-	WMS-348	Ajustes en validación de campos vacíos en el botón procesar en el reabastecimiento manual y reubicación de stock reservado.
-17	-	WMS-349	El foco en la reubicación se iba al código a pesar de que el producto tenia licencia y era necesario ingresarla
-18	-	WMS-350	Cuando el IdStock no tiene licencia no ocultaba el campo de la licencia y el foco se iba directo a la ubicacion
-19	-	WMS-351	En existencias al realizar el cambio de ubicación si no se hacía el cambio de ubicación al salir de existencias e ir por el menú al cambio de ubicación la pantalla aparecia con los datos seleccionados en la existencia
-20	-	WMS-352	Poner un progress bar en el reabastecimiento manual
-21	-	WMS-353	Poner un progress bar en la reubicación
-22	-	WMS-355	Insertar a través de un script las ubicaciones que existen en la Bodega Genaral y que no existen en la Bodega de Fiscal en la misma
-23	-	WMS-356	Ajuste de propietario en transacciones out
-24	-	WMS-357	Pruebas en el proceso de recepción HH, validando que se guarde correctamente valores en los campos IdPropietario e IdPropietarioBodega en la tabla i_nav_transacciones_out
-25	-	WMS-358	Pruebas con recepciones desde el BOF, para validar que se guarde correctamente valores en los campos IdPropietario e IdPropietarioBodega en la tabla i_nav_transacciones_out
-26	-	WMS-359	No cargaba correctamente el diseño de la pantalla en la verificación según el parámetro tipo_pantalla_verificación.
-27	-	WMS-360	Cerrar Ticket al finalizar recepción
-28	-	WMS-361	Reporte Ingresos Doc con diferencia lanza excepcion
-29	-	WMS-362	Corrección de la inicialización del IdTipoTarea
-30	-	WMS-363	Se agrego fecha y hora en los campos fecha, fecha_agr en el movimiento cuando se realiza un cambio de ubicación
-31	-	WMS-364	Agregar los campos URL_WSHH_QA y URL_WSHH_PRD en el conn.ini del WMS y en la clase clsCadenaConexion
-32			Ajuste en despachos parciales, se muestra únicamente el producto despachado y no todo el pedido (b3pl)
-33			Ticket TMS se pueden reutilizar y reimprimir (b3pl)
+ 1 - WMS-310	Validar proceso completo del un inventario ciclico
+ 2 - WMS-326	Error en el cambio de ubicación cuando hay presentación y unidades
+ 3 - WMS-329	Validar distribucion peso en cambio ubicacion  
+ 4 - WMS-330	Explosionar varias veces una licencia en el cambio de ubicación
+ 5 - WMS-331	Sumar la cantidad de una licencia cuando tenga mas de un stock en unidades, en el cambio de ubicación
+ 6 - WMS-333	Creación de presentaciones que no debian crearse, generando inconsistencias
+ 7 - WMS-334	Validar Cambio de Estado
+ 8 - WMS-335	Corregir Ajustes de inventario, en ocasiones al poner la cantidad en 0 permite guardar el ajuste y se pierde el Stock
+ 9 - WMS-337	Agregar al reporte de Movimientos la columna de IdOrdenCompraEnc
+10 - WMS-339	Error en el cambio de ubicación cuando la cantidad se modifica y no se limpia el campo
+11 - WMS-340	Correccion en el reemplazo en picking, estaba llegando el IdPedido en 0 al insertar el nuevo picking ubic
+12 - WMS-327	Validar productos con propiedades deshabilitadas
+13 - WMS-341	Modificar vista VW_Fiscal_CtasOrden
+14 - WMS-342	Error con la liberación del stock reservado cuando se hace el Despacho
+15 - WMS-344	Validar simbolos validos removidos en DI
+16 - WMS-348	Ajustes en validación de campos vacíos en el botón procesar en el reabastecimiento manual y reubicación de stock reservado.
+17 - WMS-349	El foco en la reubicación se iba al código a pesar de que el producto tenia licencia y era necesario ingresarla
+18 - WMS-350	Cuando el IdStock no tiene licencia no ocultaba el campo de la licencia y el foco se iba directo a la ubicacion
+19 - WMS-351	En existencias al realizar el cambio de ubicación si no se hacía el cambio de ubicación al salir de existencias e ir por el menú al cambio de ubicación la pantalla aparecia con los datos seleccionados en la existencia
+20 - WMS-352	Poner un progress bar en el reabastecimiento manual
+21 - WMS-353	Poner un progress bar en la reubicación
+22 - WMS-355	Insertar a través de un script las ubicaciones que existen en la Bodega Genaral y que no existen en la Bodega de Fiscal en la misma
+23 - WMS-356	Ajuste de propietario en transacciones out
+24 - WMS-357	Pruebas en el proceso de recepción HH, validando que se guarde correctamente valores en los campos IdPropietario e IdPropietarioBodega en la tabla i_nav_transacciones_out
+25 - WMS-358	Pruebas con recepciones desde el BOF, para validar que se guarde correctamente valores en los campos IdPropietario e IdPropietarioBodega en la tabla i_nav_transacciones_out
+26 - WMS-359	No cargaba correctamente el diseño de la pantalla en la verificación según el parámetro tipo_pantalla_verificación.
+27 - WMS-360	Cerrar Ticket al finalizar recepción
+28 - WMS-361	Reporte Ingresos Doc con diferencia lanza excepcion
+29 - WMS-362	Corrección de la inicialización del IdTipoTarea
+30 - WMS-363	Se agrego fecha y hora en los campos fecha, fecha_agr en el movimiento cuando se realiza un cambio de ubicación
+31 - WMS-364	Agregar los campos URL_WSHH_QA y URL_WSHH_PRD en el conn.ini del WMS y en la clase clsCadenaConexion
+32 - 			Ajuste en despachos parciales, se muestra únicamente el producto despachado y no todo el pedido (b3pl)
+33 - 		Ticket TMS se pueden reutilizar y reimprimir (b3pl)
