--- a/ReleaseNotes_4.6.3.7
+++ b/ReleaseNotes_4.6.3.7
@@ -1,3 +1,9 @@
 Se automatizó el release notes. (EJC)
 1. Se corrigió el error reportado en el cambio de estado, el estado era válido pero daba mensaje "Estado destino incorrecto"
 2. Se corrigió el error reportado en el cambio de ubicación no dirigido con la HH, antes enviaba un mensaje para confirmar el cambio
+3. Ajuste en Despacho Parcial, para mostrar solo productos del pedido que pertenezcan al mismo y no todos
+4. Ajuste en TMS para reimpresión/reutilización de ticket
+5. Ajuste a reporte Mov. Kardex (se actualiza vista)
+6. ajuste a reporte Ingresos Doc-Diferencias (se actualiza vista)
+7. Se permiten carácteres (- * ) dentro de la descripción de un producto (el simbolo / no esta permitido)
+8. Ajuste en Reporte Ctas de Orden, carga por despacho parcial los productos pertenecientes y no el pedido completo.
