--- a/RealeseNotes_4.6.3.8
+++ b/RealeseNotes_4.6.3.8
@@ -31,3 +31,4 @@
 31 - WMS-364	Agregar los campos URL_WSHH_QA y URL_WSHH_PRD en el conn.ini del WMS y en la clase clsCadenaConexion
 32 - 			Ajuste en despachos parciales, se muestra únicamente el producto despachado y no todo el pedido (b3pl)
 33 - 		Ticket TMS se pueden reutilizar y reimprimir (b3pl)
+34 - WMS-374 Permitir descripcion o Id en archivo excel para importar productos.
