--- a/RealeseNotes_4.6.3.8
+++ b/RealeseNotes_4.6.3.8
@@ -32,3 +32,6 @@
 32 - 			Ajuste en despachos parciales, se muestra únicamente el producto despachado y no todo el pedido (b3pl)
 33 - 		Ticket TMS se pueden reutilizar y reimprimir (b3pl)
 34 - WMS-374 Permitir descripcion o Id en ciertas columnas de archivo excel para importar productos.
+35 - WMS-372 Cargar top 50 en la reubicación de stock reservado.
+36 - WMS-375 Corrección en los documentos de ingreso de tipo de documento Liquidación de ruta (Rechazo) al actualizar el documento, se perdía el documento de referencia.
+37 - WMS-376 Modificación al proceso de Cerrar documento de Ingreso cuando es BackOrder, ya se marca como cerrada y como enviada a ERP  
