--- a/RealeseNotes_4.6.3.9
+++ b/RealeseNotes_4.6.3.9
@@ -4,3 +4,5 @@
 4. WMS-382 Bloquear el campo licencia al cargar datos de un picking consolidado.
 5. WMS-383 Mantener el tipo de lista consolidada o detallada al cambiar de pantalla.
 6. WMS-384 Corrección botón de Despacho, no liberaba el stock de los despachos parciales
+7. WMS-386 Corrección reporte de movimientos por Kardex, no salía la presentacion
+8. WMS-387 Agregué exportar a Excel en reporte de Kardex por movimientos
