--- a/RealeseNotes_4.6.3.9
+++ b/RealeseNotes_4.6.3.9
@@ -1,5 +1,5 @@
 1. WMS-346 Stock jornada tiene saltos en registros al calcular el retroactivo
-2. WMS-380 La reubicación de Stock reservado no muestra los productos que no están en ubicaciones de picking
+2. WMS-380 La reubicación de Stock reservado solo muestra los productos que están en niveles mayores a uno
 3. WMS-381 Error en la cantidad de una licencia en el cambio de ubicación
 4. WMS-382 Bloquear el campo licencia al cargar datos de un picking consolidado.
 5. WMS-383 Mantener el tipo de lista consolidada o detallada al cambiar de pantalla.
