Update Release Notes 4.7.2.5

--- a/Release Notes 4.7.2.5
+++ b/Release Notes 4.7.2.5
@@ -20,3 +20,5 @@
 20-	WMS-739	Pantalla de Detalle Pedido en la ficha de recepción, que no muestra el código del producto
 21-	WMS-740	Reporte de Ingresos, la hora en la columna de FECHA aparece como 00:00. Y se debería mostrar la hora de la recepción de la licencia.
 22-	WMS-741	Tipo devolución en reporte resumen histórico
+
+23- WMS-755 Se corrigió error reportado en reporte 9, corrigiendo la vista vw_stock_res
